right side slide cropping issue solved using jquery

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -38,7 +38,7 @@
 
 ::ng-deep .sub-carosal .slick-list
 {
-    overflow: visible !important;
+    /* overflow: visible !important; */
 }
 
 .main-carosal.slick-active{
@@ -207,6 +207,24 @@ background: linear-gradient(to bottom, transparent 25%, black 90%) !important; *
     position: relative;
 } */
 
+
+.right-slide-carousel:hover
+{
+    box-shadow: 0px 0px 3px #FFFFFF;
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 200ms ease-in;
+    transform: scale3d(1.2,1.2,1) translate3d(-8%,0,0)!important;
+    max-width: 500px;
+    max-height: 500px;
+    position: relative;
+}
+
 .shadow-overlay
 {
     margin: 10px;
@@ -251,7 +269,7 @@ background: linear-gradient(to bottom, transparent 25%, black 90%) !important; *
     left: 0;
     right: 0;
     bottom: 0; */
-    background: linear-gradient(to bottom, transparent 76%, black 242%);
+
 
 
     /* content: '';
@@ -262,15 +280,14 @@ background: linear-gradient(to bottom, transparent 25%, black 90%) !important; *
     border-radius: 6px;
     bottom: 4%;; */
 
-
+    /* background: linear-gradient(to bottom, transparent 76%, black 242%);
     content: '';
     position: absolute;
     top: 0;
     left: 16.77%;
-    /* left: 240px; */
     right: 66.77%;
     border-radius: 7px;
-    bottom: 3.6%;
+    bottom: 3.6%; */
     /* background: red; */
 
 
@@ -589,3 +606,54 @@ background: linear-gradient(to bottom, transparent 25%, black 90%) !important; *
         max-width: 100vw !important; 
     }
 } */
+
+/* .trays-container
+{
+    max-width: 100%;
+    padding: 15px 10px 45px;
+    margin: 0 55px 0 35px;
+    position: relative;
+}
+
+.trays-container::before
+{
+    background-image: linear-gradient(to right, rgba(238,238,238,0) 10px, #151c25 40px);
+    content: "";
+    display: block;
+    height: 100%;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    position: absolute;
+    z-index: 1;
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
+    transform: translateX(100%);
+    width: calc((100vw - 1170px + 60px)/2);
+    width: 80px;;
+}
+
+.trays-container::after
+{
+    content: "";
+    display: block;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    top: 0;
+    position: absolute;
+    z-index: 1;
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    -o-transform: translateX(-100%);
+    transform: translateX(-100%);
+    width: calc((100vw - 1170px)/2);
+    background-image: linear-gradient(to left, rgba(238,238,238,0) 0px, #151c25 20px);
+    width: 35px;
+    left: 0;
+} */
+/* 21,28,37 */
+
+
+
